syntax = "proto3";

service LogService {
    rpc InfoLog(Request) returns (Response) {}
}

message Request {
    string log = 1;
    int32 level = 2;
}

message Response {
    string status = 1;
    string message = 2;
}
